--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -20,7 +20,17 @@
   "rules": {
     "no-unused-vars": "warn",
     "no-console": "off",
+    "no-use-before-define": "off",
+    "react/forbid-prop-types": "off",
     "react/react-in-jsx-scope": "off",
+    "jsx-a11y/label-has-associated-control": [
+      "error",
+      {
+        "required": {
+          "some": ["nesting", "id"]
+        }
+      }
+    ],
     "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"] }],
     "react/prop-types": "off"
   }
