update update relative path

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -33,12 +33,6 @@
     ],
     "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"] }],
     "react/prop-types": "off",
-    "settings": {
-      "import/resolver": {
-        "node": {
-          "extensions": [".js", ".jsx", ".ts", ".tsx"]
-        }
-      }
-    }
+    "import/no-unresolved": "off"
   }
 }
